<resources>
    <string name="app_name">Hjälp i Gympabubblan</string>
    <string name="app_name_short">HiG</string>
    <string name="menu_drills">Drills</string>
    <string name="menu_strength">Strength</string>
    <string name="menu_difficulty">Difficulty</string>
    <string name="menu_upload">Upload</string>
    <string name="choose_skill">Choose skill</string>
    <string name="difficultyText">Difficulty value</string>
    <string name="resetSkills">Reset</string>
    <string name="pickSkill">Pick a skill</string>
    <string name="search">Search</string>
    <string name="describe_drill">Describe your drill</string>
    <string name="tags">Tags</string>
    <string name="upload_drill">Done</string>
    <string name="login_greeting">Log in to upload and save your favourite drills!</string>
    <string name="sign_out">Sign out</string>
    <string name="user_favourites">Favourites</string>
    <string name="user_my_drills">My drills</string>
    <string name="user_upload">Upload</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="create_account">Create account</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="drill_name">Drill name</string>
    <string name="favourite_sign_in">Sign in to add favourite</string>
</resources>